# nezumi

./: .gitignore  .gitmodules  .tool-versions  README.md  appinfo-template.json  appinfo.json  build.sh  generate_classes.py  generate_resources.py  makestruct
artwork-outstanding/Icons/: nEzumi-Icon.emf
artwork-outstanding/PSD/: nEzumi-Icon.psd  nEzumi-Mad-90x90.psd  nEzumi-Sleeping.psd
artwork-outstanding/Splash/: nEzumi-Antlers.psd
artwork/original/: Thumbs.db
artwork/original/nezumi_archive/: Interface.psd  Interface2.psd  Thumbs.db  nEzumi-Blink_swish.psd  nEzumi-Interface copy.psd  nEzumi-Interface.psd  nEzumi-Mad copy.psd  (+3 more)
artwork/revised/: nezumi-icon.psd
graphics/: credits.acorn
ios/: MainWindow.xib  Nezumi2-Info.plist
ios/Classes/: DINezAnimationView.h  DINezAnimationView.m  FirstViewController.h  MainView.h
ios/nezumi.xcodeproj/: inertia.pbxuser  inertia.perspectivev3
json/: data.json  types.json
pebble/: build.py
pebble/json/: data.json  nezumi.json  types.json
pebble/resources/: wscript
pebble/src/: actions.h  animation.h  nezumi.c
resources/src/: resource_map.json
rust/: Cargo.toml  run.sh  states.json
rust/src/: main.rs
scripts/: generate_credits
source/: MainWindow.xib  Nezumi2-Info.plist  Nezumi2_Prefix.pch  SecondView.xib  main.m  nezumi.json
source/Classes/: DINezAnimationView.h  DINezAnimationView.m  FirstViewController.m  MainView.m  Nezumi2AppDelegate.h  Nezumi2AppDelegate.m
source/nezumi.xcodeproj/: project.pbxproj
src/: actions.h  animation.h  data.json  hello_world.c  nezumi.c  nezumi.json  types.json
(+19 files in other folders)
