[package]
name = "nezumi-rust"
version = "0.1.0"
edition = "2021"

[features]
drm = []

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[target.'cfg(not(feature = "drm"))'.dependencies]
raylib = { version = "5.5", path = "raylib-rs/raylib" }

[target.'cfg(feature = "drm")'.dependencies]
raylib = { version = "5.5", features = ["sdl"], path = "raylib-rs/raylib" }
